refactor: frontend & backend

--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -4,5 +4,9 @@
       "editor.formatOnSave": true,
       "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
+    "[vue]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+      },
   }
   
