--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,16 @@
   },
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.1071.0",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "helmet": "^5.0.2"
+    "helmet": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.1",
+    "multer": "^1.4.4",
+    "sharp": "^0.30.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
