--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,17 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.6",
+    "@vue/composition-api": "^1.4.6",
+    "autoprefixer": "^10.4.2",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
+    "vue-quill-editor": "^3.0.6",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vue-toastification": "^1.7.14",
+    "vue2-editor": "^2.10.3",
+    "vuelidate": "^0.7.6",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
@@ -36,7 +42,7 @@
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.4.4",
-    "postcss": "^8.4.4",
+    "postcss": "^8.4.6",
     "prettier": "^2.5.1",
     "vue-jest": "^3.0.4"
   }
