--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
     "lint": "yarn lint:js && yarn lint:prettier",
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix",
     "test": "jest",
+    "test:unit": "jest test/unit",
+    "test:unit-dev": "jest test/unit-dev",
+    "test:e2e": "jest test/e2e",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage"
   },
@@ -24,9 +27,7 @@
     "@vue/composition-api": "^1.4.6",
     "autoprefixer": "^10.4.2",
     "core-js": "^3.19.3",
-    "flush-promises": "^1.0.2",
     "nuxt": "^2.15.8",
-    "supertest": "^6.2.2",
     "vue": "^2.6.14",
     "vue-quill-editor": "^3.0.6",
     "vue-server-renderer": "^2.6.14",
@@ -41,19 +42,22 @@
     "@nuxt/test-utils": "^0.2.2",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@playwright/test": "^1.19.2",
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/vue": "^6.5.1",
     "@vue/test-utils": "^1.3.0",
+    "axios-mock-adapter": "^1.20.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
+    "flush-promises": "^1.0.2",
     "jest": "^27.5.1",
     "playwright": "^1.19.2",
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
+    "supertest": "^6.2.2",
     "vue-jest": "^3.0.4"
   }
 }
