--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js",
-    "test": "jest --runInBand --force-exit --coverage"
+    "dev": "cross-env NODE_ENV=development nodemon app.js",
+    "start": "cross-env NODE_ENV=production node app.js",
+    "test:e2e": "jest test/e2e/ --runInBand --force-exit --coverage",
+    "test:db": "cross-env NODE_ENV=test nyc --reporter=text mocha test/db/**/*.spec.js --delay"
   },
   "license": "MIT",
   "dependencies": {
@@ -21,7 +22,13 @@
     "sharp": "^0.30.1"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "cross-env": "^7.0.3",
     "jest": "^27.5.1",
-    "nodemon": "^2.0.15"
+    "mocha": "^9.2.1",
+    "mongo-unit": "^3.2.0",
+    "nodemon": "^2.0.15",
+    "nyc": "^15.1.0",
+    "supertest": "^6.2.2"
   }
 }
