--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -68,6 +68,8 @@ typings/
 # nuxt.js build output
 .nuxt
 
+.nuxt-build-jest
+
 # Nuxt generate
 dist
 
@@ -88,3 +90,6 @@ sw.*
 
 # Vim swap files
 *.swp
+
+# jest
+.nuxt-build-jest
