--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon app.js",
     "start": "cross-env NODE_ENV=production node app.js",
-    "test:e2e": "jest test/e2e/ --runInBand --force-exit --coverage",
+    "test:e2e": "cross-env NODE_ENV=test nyc --reporter=text mocha test/e2e/**/*.spec.js --delay",
     "test:db": "cross-env NODE_ENV=test nyc --reporter=text mocha test/db/**/*.spec.js --delay"
   },
   "license": "MIT",
@@ -24,7 +24,6 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "cross-env": "^7.0.3",
-    "jest": "^27.5.1",
     "mocha": "^9.2.1",
     "mongo-unit": "^3.2.0",
     "nodemon": "^2.0.15",
