--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.6",
+    "chai-spies": "^1.0.0",
     "mocha": "^9.2.1",
     "mongo-unit": "^3.2.0",
     "nodemon": "^2.0.15",
