--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "test:unit-dev": "jest test/unit-dev",
     "test:e2e": "jest test/e2e",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage"
+    "test:cov": "jest --coverage",
+    "cypress:open": "cypress open",
+    "e2e": "start-server-and-test dev http://localhost:3000 cypress:open"
   },
   "dependencies": {
     "@braid/vue-formulate": "^2.5.3",
@@ -49,6 +51,7 @@
     "axios-mock-adapter": "^1.20.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
+    "cypress": "^9.5.1",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
@@ -58,6 +61,7 @@
     "playwright": "^1.19.2",
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
+    "start-server-and-test": "^1.14.0",
     "supertest": "^6.2.2",
     "vue-jest": "^3.0.4"
   }
