--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
     stages {
         stage('Pull code') {
             steps {
-                git branch: 'main', url: 'https://github.com/taritinth/sw-dev-tools-and-environments-project.git'
+                checkout scm
             }
         }
         stage('Download dependency') {
