--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -13,18 +13,35 @@ pipeline {
         }
         stage('Download dependency') {
             steps {
-                sh 'cd frontend && npm install'
-                sh 'cd backend && npm install'
+                bat 'cd frontend && npm install'
+                bat 'cd backend && npm install'
             }
         }
         stage('Run unit test') {
             steps {
-                sh 'cd frontend && npm run test:unit'
+                bat 'cd frontend && npm run test:unit'
+                publibatHTML target: [
+                    allowMissing: false,
+                    alwaysLinkToLastBuild: false,
+                    keepAll: true,
+                    reportDir: "./coverage/lcov-report",
+                    reportFiles: "index.html",
+                    reportName: 'Unit Test Coverage Report'
+                ]
+
+                publishHTML target: [
+                    allowMissing: false,
+                    alwaysLinkToLastBuild: false,
+                    keepAll: true,
+                    reportDir: "./coverage",
+                    reportFiles: "report.html",
+                    reportName: 'Unit Test Report'
+                ]
             }
         }
         stage('Run component test') {
             steps {
-                sh 'cd frontend && npm run test:component'
+                bat 'cd frontend && npm run test:component'
             }
         }
         stage("Code coverage report") {
