test: generate test report

--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -14,29 +14,31 @@ pipeline {
         stage('Download dependency') {
             steps {
                 bat 'cd frontend && npm install'
-                bat 'cd backend && npm install'
+                // bat 'cd backend && npm install'
             }
         }
         stage('Run unit test') {
             steps {
-                bat 'cd frontend && npm run test:unit'
-                publibatHTML target: [
-                    allowMissing: false,
-                    alwaysLinkToLastBuild: false,
-                    keepAll: true,
-                    reportDir: "./coverage/lcov-report",
-                    reportFiles: "index.html",
-                    reportName: 'Unit Test Coverage Report'
-                ]
+                dir('./front-end') {
+                    bat 'npm run test:unit'
+                    publibatHTML target: [
+                        allowMissing: false,
+                        alwaysLinkToLastBuild: false,
+                        keepAll: true,
+                        reportDir: "./coverage/lcov-report",
+                        reportFiles: "index.html",
+                        reportName: 'Unit Test Coverage Report'
+                    ]
 
-                publishHTML target: [
-                    allowMissing: false,
-                    alwaysLinkToLastBuild: false,
-                    keepAll: true,
-                    reportDir: "./coverage",
-                    reportFiles: "report.html",
-                    reportName: 'Unit Test Report'
-                ]
+                    publishHTML target: [
+                        allowMissing: false,
+                        alwaysLinkToLastBuild: false,
+                        keepAll: true,
+                        reportDir: "./coverage",
+                        reportFiles: "report.html",
+                        reportName: 'Unit Test Report'
+                    ]
+                }
             }
         }
         stage('Run component test') {
