--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -42,6 +42,23 @@ pipeline {
         stage('Run component test') {
             steps {
                 sh 'cd frontend && npm run test:component'
+                publishHTML target: [
+                    allowMissing: false,
+                    alwaysLinkToLastBuild: false,
+                    keepAll: true,
+                    reportDir: "./coverage/lcov-report",
+                    reportFiles: "index.html",
+                    reportName: 'Component Test Coverage Report'
+                ]
+
+                publishHTML target: [
+                    allowMissing: false,
+                    alwaysLinkToLastBuild: false,
+                    keepAll: true,
+                    reportDir: "./coverage",
+                    reportFiles: "report.html",
+                    reportName: 'Component Test Report'
+                ]
             }
         }
         stage("Code coverage report") {
