test: generate test report

--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -29,14 +29,14 @@ pipeline {
                         reportName: 'Unit Test Coverage Report'
                     ]
 
-                    publishHTML target: [
-                        allowMissing: false,
-                        alwaysLinkToLastBuild: false,
-                        keepAll: true,
-                        reportDir: "./coverage",
-                        reportFiles: "report.html",
-                        reportName: 'Unit Test Report'
-                    ]
+                    // publishHTML target: [
+                    //     allowMissing: false,
+                    //     alwaysLinkToLastBuild: false,
+                    //     keepAll: true,
+                    //     reportDir: "./coverage",
+                    //     reportFiles: "report.html",
+                    //     reportName: 'Unit Test Report'
+                    // ]
                 }
             }
         }
@@ -53,14 +53,14 @@ pipeline {
                         reportName: 'Component Test Coverage Report'
                     ]
 
-                    publishHTML target: [
-                        allowMissing: false,
-                        alwaysLinkToLastBuild: false,
-                        keepAll: true,
-                        reportDir: "./coverage",
-                        reportFiles: "report.html",
-                        reportName: 'Component Test Report'
-                    ]
+                    // publishHTML target: [
+                    //     allowMissing: false,
+                    //     alwaysLinkToLastBuild: false,
+                    //     keepAll: true,
+                    //     reportDir: "./coverage",
+                    //     reportFiles: "report.html",
+                    //     reportName: 'Component Test Report'
+                    // ]
                 }
             }
         }
