add: stage in jenkinsfile

--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -73,5 +73,10 @@ pipeline {
                 )
             }
         }
+        stage("Build Docker Compose") {
+            steps {
+                sh 'docker-compose -f docker-compose-build.yml build'
+            }
+        }
     }
 }
