add: stage in jenkinsfile

--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -75,7 +75,7 @@ pipeline {
         }
         stage("Build Docker Compose") {
             steps {
-                sh 'docker-compose -f docker-compose-build.yml build'
+                sh 'docker compose -f docker-compose-build.yml build'
             }
         }
     }
