build: test build & deploy frontend to server from pipeline

--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -84,9 +84,21 @@ pipeline {
                 echo 'Build docker image'
             }
         }
-        stage("Deploy") {
+        stage("Deploy:") {
             steps {
-                echo 'Deploy docker-compose'
+                script{
+                    def remote = [:]
+                    remote.name = "root"
+                    remote.host = '159.65.12.177'
+                    remote.user = 'root'
+                    remote.password = 'xitgmLwmp12q'
+                    remote.allowAnyHosts = true
+                    sshCommand remote: remote, command: "git clone -b main https://github.com/taritinth/sw-dev-tools-and-environments-project.git team-8-frontend"
+                    sshCommand remote: remote, command: "docker-compose -f team-8-frontend/sw-dev-tools-and-environments-project/docker-compose-build.yml build frontend"
+                    sshCommand remote: remote, command: "docker-compose -f team-8-frontend/sw-dev-tools-and-environments-project/docker-compose-deploy.yml up -d frontend"
+                    sshCommand remote: remote, command: "rm -r team-8-frontend"
+
+                }
             }
         }
     }
