--- a/docker-compose-build.yml
+++ b/docker-compose-build.yml
@@ -1,8 +1,8 @@
 version: "3"
 services:
   frontend:
-    image: 808218764127/team-8-frontend
+    image: 808218764127/team-8-frontend:1.0.0
     build: ./frontend
   backend:
-    image: 808218764127/team-8-backend
+    image: 808218764127/team-8-backend:1.0.0
     build: ./backend
