build: edit docker compose config in JenkinsFile

--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -86,19 +86,23 @@ pipeline {
         }
         stage("Deploy:") {
             steps {
-                script{
-                    def remote = [:]
-                    remote.name = "root"
-                    remote.host = '159.65.12.177'
-                    remote.user = 'root'
-                    remote.password = 'xitgmLwmp12q'
-                    remote.allowAnyHosts = true
-                    sshCommand remote: remote, command: "git clone -b main https://github.com/taritinth/sw-dev-tools-and-environments-project.git team-8-frontend"
-                    sshCommand remote: remote, command: "docker-compose -f team-8-frontend/docker-compose-deploy.yml down"
-                    sshCommand remote: remote, command: "docker-compose -f team-8-frontend/docker-compose-build.yml build frontend"
-                    sshCommand remote: remote, command: "docker-compose -f team-8-frontend/docker-compose-deploy.yml up -d frontend"
-                    sshCommand remote: remote, command: "rm -r team-8-frontend"
+                withCredentials([
+                    file(credentialsId: '2d6ba988-e935-4fd1-822b-c69cf81b9020', usernameVariable: 'USERNAME', hostVariable: 'FRONTEND_HOST', passwordVariable: 'PASSWORD')]) {
+                    script{
+                        def remote = [:]
+                        remote.name = USERNAME
+                        remote.host = FRONTEND_HOST
+                        remote.user = USERNAME
+                        remote.password = PASSWORD
+                        remote.allowAnyHosts = true
+                        sshCommand remote: remote, command: "git clone -b main https://github.com/taritinth/sw-dev-tools-and-environments-project.git team-8-frontend"
+                        sshCommand remote: remote, command: "docker-compose -f team-8-frontend/docker-compose-deploy.yml down"
+                        sshCommand remote: remote, command: "docker-compose -f team-8-frontend/docker-compose-build.yml build frontend"
+                        sshCommand remote: remote, command: "docker-compose -f team-8-frontend/docker-compose-deploy.yml up -d frontend"
+                        sshCommand remote: remote, command: "rm -r team-8-frontend"
+                    }
                 }
+             
             }
         }
     }
