--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -87,7 +87,13 @@ pipeline {
         stage("Deploy:") {
             steps {
                 withCredentials([
-                    file(credentialsId: '2d6ba988-e935-4fd1-822b-c69cf81b9020', usernameVariable: 'USERNAME', hostVariable: 'FRONTEND_HOST', passwordVariable: 'PASSWORD')]) {
+                    file(credentialsId: '2d6ba988-e935-4fd1-822b-c69cf81b9020', variable: 'team-8-host'),
+                    [
+                        usernameVariable: 'USERNAME', 
+                        hostVariable: 'FRONTEND_HOST', 
+                        passwordVariable: 'PASSWORD'
+                    ]
+                ]){
                     script{
                         def remote = [:]
                         remote.name = USERNAME
