--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -110,6 +110,7 @@ pipeline {
                         remote.user = TEAM8_USERNAME
                         remote.password = TEAM8_HOST_PASSWORD
                         remote.allowAnyHosts = true
+                        sshCommand remote: remote, command: "rm -rf team-8-frontend"
                         sshCommand remote: remote, command: "git clone -b main https://github.com/taritinth/sw-dev-tools-and-environments-project.git team-8-frontend"
                         sshCommand remote: remote, command: "docker-compose -f team-8-frontend/docker-compose-deploy.yml down"
                         sshCommand remote: remote, command: "docker-compose -f team-8-frontend/docker-compose-build.yml build frontend"
