build: update secret in docker compose

--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -13,6 +13,13 @@ services:
       - AWS_SECRET
       - S3_BUCKET_NAME
       - JWT_SECRET
+    environment:
+      - ATLAS_URI: /run/secrets/ATLAS_URI
+      - ATLAS_TEST_URI: /run/secrets/ATLAS_TEST_URI
+      - AWS_ID: /run/secrets/AWS_ID
+      - AWS_SECRET: /run/secrets/AWS_SECRET
+      - S3_BUCKET_NAME: /run/secrets/S3_BUCKET_NAME
+      - JWT_SECRET: /run/secrets/JWT_SECRET
     ports:
       - "9999:8081"
 secrets:
