--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -1,4 +1,19 @@
 version: "3"
+
+secrets:
+  ATLAS_URI:
+    external: true
+  ATLAS_TEST_URI:
+    external: true
+  AWS_ID:
+    external: true
+  AWS_SECRET:
+    external: true
+  S3_BUCKET_NAME:
+    external: true
+  JWT_SECRET:
+    external: true
+
 services:
   frontend:
     image: 808218764127/team-8-frontend:1.0.0
@@ -14,24 +29,11 @@ services:
       - S3_BUCKET_NAME
       - JWT_SECRET
     environment:
-      - ATLAS_URI: /run/secrets/ATLAS_URI
-      - ATLAS_TEST_URI: /run/secrets/ATLAS_TEST_URI
-      - AWS_ID: /run/secrets/AWS_ID
-      - AWS_SECRET: /run/secrets/AWS_SECRET
-      - S3_BUCKET_NAME: /run/secrets/S3_BUCKET_NAME
-      - JWT_SECRET: /run/secrets/JWT_SECRET
+      - ATLAS_URI=/run/secrets/ATLAS_URI
+      - ATLAS_TEST_URI=/run/secrets/ATLAS_TEST_URI
+      - AWS_ID=/run/secrets/AWS_ID
+      - AWS_SECRET=/run/secrets/AWS_SECRET
+      - S3_BUCKET_NAME=/run/secrets/S3_BUCKET_NAME
+      - JWT_SECRET=/run/secrets/JWT_SECRET
     ports:
       - "9999:8081"
-secrets:
-    ATLAS_URI:
-      external: true
-    ATLAS_TEST_URI:
-      external: true
-    AWS_ID:
-      external: true
-    AWS_SECRET:
-      external: true
-    S3_BUCKET_NAME:
-      external: true
-    JWT_SECRET:
-      external: true
